app/assets/stylesheets/modules/_general.scss
@media only screen {
  * { margin: 0; }
  html, body { height: auto; }
}

@media only screen and (min-width:320px) {}

@media only screen and (min-width:480px) {}

@media only screen and (min-width:768px) {
  main { padding-top: rem-calc(70); }
}

@media only screen and (min-width:1024px) {}

@media only screen and (min-width:1140px) {}

@media only screen and (min-width:1280px) {}

@media print, (-o-min-device-pixel-ratio: 5/4), (-webkit-min-device-pixel-ratio: 1.25), (min-resolution: 120dpi) {}

